# edc_project

./: Dockerfile  README.md
client/: cli.py  diagnostics_pb2.py  diagnostics_pb2_grpc.py
daemon/: CMakeLists.txt
daemon/include/: diagnostics_service_impl.h
daemon/src/: diagnostics_service_impl.cpp  main.cpp
proto/: diagnostics.proto
systemd/: edc_daemon.service
tests/: test_client.py
tools/: metrics.csv  metrics_logger.py
yocto-layer/meta-edc/recipes-edc/edc-daemon/: edc-daemon_1.0.bb
